# llm-personality-test

./: .gitignore  README.md  main.py  pyproject.toml  report.py  run_all.py
.claude/: settings.local.json
src/: __init__.py  llm_client.py  mcp_client.py  models.py  test_runner.py
